--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,10 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container">
+    <div class="card">
+        <h1>{{title}}</h1>
+        <p>Welcome to {{title}}</p>
+        <ul>
+            <li><a href="/auth/sign-up">Create an account</a></li>
+            <li><a href="/auth/sign-in">Sign in</a></li>
+        </ul>
+    </div>
+</div>
