--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,6 +5,8 @@
         <ul>
             <li><a href="/auth/sign-up">Create an account</a></li>
             <li><a href="/auth/sign-in">Sign in</a></li>
+            <li><a href="/auth/sign-out">Sign out</a></li>
+            <li><a href="/protected">Tell me a secret</a></li>
         </ul>
     </div>
 </div>
