--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -10,6 +10,10 @@
             <br>
             <br>
             <button type='submit'>Create my User Account</button>
+            <br>
+            <br> {{#if error}}
+            <p>ERROR: {{error}}</p>
+            {{/if}}
         </form>
     </div>
 </div>
