added google login

--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -15,5 +15,7 @@
             <p>ERROR: {{error}}</p>
             {{/if}}
         </form>
+
+        <a href="/auth/google"><button>Sign up with Google</button></a>
     </div>
 </div>
