--- a/views/sign-in.hbs
+++ b/views/sign-in.hbs
@@ -6,7 +6,7 @@
         <form action="/auth/sign-in" method='POST'>
             <input type="email" name='email' required='true'>
             <br>
-            <input type="password" name='password' required='true'>
+            <input type="password" name='password'>
             <br>
             <br>
             <button type='submit'>Sign into your user account</button>
@@ -16,5 +16,9 @@
             <p>ERROR: {{error}}</p>
             {{/if}}
         </form>
+
+        <br>
+        <br>
+        <a href="/auth/google"><button>Sign in with Google</button></a>
     </div>
 </div>
